--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -1,6 +1,5 @@
 .content-section {
-  padding-top: 7.5rem;
-  padding-bottom: 7.5rem;
+  padding: 6rem 3rem;
   
   h2 {
     font-size: 3rem;
@@ -12,4 +11,22 @@
   }
 }
 
+.portfolio-item {
+    display: block;
+    width: 100%;
+    height: 600px;
+    background-position: center center;
+    position: relative;
+    margin-bottom: 30px;
+    background-color: pink;
+}
 
+@media only screen and (max-width: 1199px) and (min-width: 992px) {
+.portfolio-item {
+    height: 450px;
+    }
+}
+
+footer {
+	background-color: orange;
+}
